--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.4",
+    "@tanstack/react-query": "^5.59.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
