--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@radix-ui/themes": "^3.1.4",
     "@tanstack/react-query": "^5.59.13",
+    "@tanstack/react-router": "^1.64.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tanstack/router-devtools": "^1.64.3",
+    "@tanstack/router-plugin": "^1.64.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
