--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-router": "^1.64.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
