Add auth routes and setup JWT cookie logic for login route

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.1",
     "@hono/zod-validator": "^0.4.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
     "hono": "^4.6.3",
     "postgres": "^3.4.4",
